# MyPT

./: .dockerignore  .gitignore  CHANGELOG.md  CHECKPOINT_FORMAT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  JSON_CHECKPOINT_MIGRATION.md  README.md  REFACTORING_SUMMARY.md  TOKENIZER_FIX_SUMMARY.md  convert_legacy_checkpoints.py  docker-compose.gpu.yml  docker-compose.yml  generate.py  helper_selfaggregation.py  input_dante.txt  inspect_model.py  loader.py  model.py  output_firstRun.txt  outputs_tiktoken_generate.txt  pyproject.toml  requirements.txt  test.py  tokenizer.py  train.py
.nogic/: nogic.db
configs/: 150M.json  150M_1024.json  200M.json  200M_1024.json  250M.json  250M_1024.json  350M_1024.json  500M_1024.json  MEMORY_GUIDE.md  README.md  phase1b_context_extension.json  small_char.json  tiny.json  tiny_char.json
configs/audit/: compliance.json
configs/base/: 750M_phase1_5_induction.json  750M_phase1_5_induction_beta.json  750M_unified_v1.json
configs/pretrain/: 150M.json  750M_1024.json  750M_1024_deep.json  750M_1024_domain_adapt.json  750M_1024_reasoning.json  micro.json  small.json  tiny.json
configs/sft/: phase1_format_lock.json  phase1_format_lock_nopack_shortctx.json  phase2_5_wrap_antiecho.json  phase2_6_antiecho.json  phase2_7_rebalance.json  phase2_8_echo_rebalance.json  phase2_8b_echo_rebalance.json  phase2_8c_exactness_bridge.json  phase2_operators.json  phase2_remix_existing.json  phase2_unified_rebuild.json  phase3_1_corrective.json  phase3_1_restart.json  phase3_2_corrective.json  phase3_chat_sft.json  phase3_chat_sft_110k.json  phase4_multiturn.json  phase5_simple_toolcall.json  phase6_agentic_rag.json
configs/sft1/: 250M_1024_chat_sft.json  750M_1024_chat_sft_phase3a.json  750M_1024_chat_sft_phase3a_augmented.json  750M_1024_chat_sft_phase3a_mixed25.json  750M_1024_chat_sft_phase3a_pure.json  750M_chat_sft.json  750M_phase3a1_alpha.json  750M_phase3a1_beta.json  750M_phase3a1_format_lock.json  750M_phase3a1_gamma.json  750M_phase3a2.json  750M_phase3a2_minimal_qa.json  750M_phase3a_operator.json  750M_phase3a_operator_contrastive.json  750M_phase3a_operator_packed.json  README_PHASE3A.md  micro.json  tiny_sft.json
configs/sft2/: toolchat.json  toolchat_150M.json  toolchat_750M.json  (+1 more)
core/: __init__.py  banner.py  checkpoint.py  data_loader.py  dataset_lineage.py  episode_data_loader.py  eval_blacklist.py  generator.py  gold_selection.py  model.py  special_tokens.py  system_prompts.py  tokenizer.py  training_utils.py
docker/: entrypoint.sh  env.example
docs/: AUDIT_COMPLIANCE.md  AUTHENTICATION.md  CLI_REFACTORING.md  CONFIG_PRESETS.md  CONFIG_PRESETS_SUMMARY.md  DATASET_COVERAGE_ANALYSIS.md  DATA_PERSISTENCE.md  DATA_SCRIPTS.md  DATA_SOURCES_CONFIG.md  DEPENDENCIES.md  DOCKER.md  DOCS_ORGANIZATION.md  DOCUMENT_FORMATS.md  EPISODE_AUGMENTATION_GUIDE.md  EPISODE_INDEXED_SFT.md  GENERATION_GUIDE.md  GOLDEPISODES_REFERENCE.md  HIGH_CONTEXT_CONFIGS.md  HIGH_CONTEXT_SUMMARY.md  LARGE_DATASET_TRAINING.md  OPERATOR_TRAINING_RESULTS.md  PACKAGING_SUMMARY.md  PARAMETER_CALCULATION.md  PHASE3A_SFT_COMPLETE_GUIDE.md  PHASE3A_TRAINING_PIPELINE.md  PROJECT_STRUCTURE.md  README.md  SFT_IMPLEMENTATION_SUMMARY.md  SFT_LOSS_MASKING.md  SHARDED_DATASET_IMPLEMENTATION.md  SHARDED_TOKENIZER_FIX.md  TRAINING_CONFIG.md  VOCAB_SIZE_EXPLAINED.md  WEBAPP_GUIDE.md  WHERE_TO_SEE_PARAMETERS.md  assess_phase3b.md  chat_sft_with_context.md  phase2_domain_corpus.md  phase3a1_checks_2.md  phase3a1_checks_3.md  (+11 more)
examples/: README.md  example_usage.py
scripts/: README.md  __init__.py  analyze_episode_diversity.py  append_to_dataset.py  augment_episodes_paraphrase.py  build_rag_index.py  build_unified_dataset.py  calculate_params.py  check_tie_weights.py  convert_legacy_checkpoints.py  convert_opensubtitles.py  debug_inference_parity.py  deduplicate_by_user_message.py  deduplicate_episodes.py  diagnose_operator_loss.py  diagnose_sft_training.py  diversify_user_messages.py  download_nq_triviaqa.py  download_unified_sources.py  enable_weight_tying.py  extract_for_translation.py  fetch_and_prepare_multilingual.py  fetch_and_prepare_phase1_5.py  fetch_and_prepare_phase2_domain.py  generate_agent_sft.py  generate_echo_dataset.py  generate_format_lock_dataset.py  generate_operator_dataset.py  generate_run2_minimal_qa.py  init_special_embeddings.py  inspect_model.py  inspect_sft_dataset.py  manage_users.py  merge_bilingual_episodes.py  mix_general_with_sft.py  mix_multi_source.py  mix_sft_jsonl.py  mix_tokenized_datasets.py  prepare_chat_sft.py  prepare_dataset.py  (+15 more)
test_work/: dedupe_report.json
tests/: README_LOSS_MASK_TESTS.md  __init__.py  test_agent_components.py  test_audit.py  test_docker.py  test_docker.sh  test_dual_eval.py  test_episode_data_loader.py  test_loss_mask.py  test_loss_mask_training.py  test_rag_components.py
tools/: apply_phase31_pipeline.py  build_phase2_corpus.py  clean_code_corpus.py  clean_dialogue_corpus.py  strip_metadata.py  swiss_law_fedlex_scraper.py
webapp/: README.md  __init__.py  auth.py  logging_config.py  main.py
work/: dedupe_report.json
workspace/: .gitkeep
(+168 files in other folders)
