[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypt"
version = "0.2.0"
description = "A minimal GPT implementation with modular architecture and JSON-based checkpoints"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["gpt", "transformer", "language-model", "deep-learning", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mypt"
Repository = "https://github.com/yourusername/mypt"
Documentation = "https://github.com/yourusername/mypt/blob/main/README.md"

[project.scripts]
# Core commands
mypt-train = "train:main"
mypt-generate = "generate:main"

# Agentic RAG
mypt-workspace-chat = "scripts.workspace_chat:main"
mypt-build-index = "scripts.build_rag_index:main"
mypt-generate-sft = "scripts.generate_agent_sft:main"

# Dataset preparation
mypt-prepare-dataset = "scripts.prepare_dataset:main"
mypt-prepare-chat-sft = "scripts.prepare_chat_sft:main"
mypt-prepare-tool-sft = "scripts.prepare_tool_sft:main"
mypt-prepare-weighted = "scripts.prepare_weighted_dataset:main"
mypt-fetch-multilingual = "scripts.fetch_and_prepare_multilingual:main"

# Utilities
mypt-show-configs = "scripts.show_configs:main"
mypt-calculate-params = "scripts.calculate_params:main"
mypt-convert-legacy = "scripts.convert_legacy_checkpoints:main"

[tool.setuptools.packages.find]
include = ["core*", "scripts*"]
exclude = ["__pycache__*", "*.pyc", "checkpoints*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | checkpoints
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

